--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port 3000 --host 0.0.0.0",
+    "deploy:build": "npm run build && npm run preview"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
