--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -3,7 +3,7 @@ name: syl-transport-system
    - name: web
      source_dir: /
      github:
-       repo: your-username/syl-system
+       repo: notyburin27/syl-system
        branch: main
      run_command: npm start
      environment_slug: node-js
