--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview --port 3000 --host 0.0.0.0 --open false",
+    "start": "vite preview --port 3000 --host 0.0.0.0",
     "deploy:build": "npm run build && npm run preview"
   },
   "dependencies": {
