Add Express server for production deployment with gzip compression and health checks

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -5,7 +5,7 @@ services:
     github:
       repo: notyburin27/syl-system
       branch: main
-    build_command: npm run build
+    build_command: npm install && npm run build
     run_command: npm start
     environment_slug: node-js
     instance_count: 1
@@ -13,9 +13,9 @@ services:
     routes:
       - path: /
     health_check:
-      http_path: /
+      http_path: /health
     envs:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: "3000"
+        value: "8080"
