--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview --port 3000 --host 0.0.0.0 --open false",
-    "deploy:build": "npm run build && npm run preview"
+    "start": "node server.js",
+    "start:vite": "vite preview --port 3000 --host 0.0.0.0 --open false",
+    "deploy:build": "npm run build && npm run start"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "antd": "^5.17.0",
+    "compression": "^1.8.1",
     "dayjs": "^1.11.10",
+    "express": "^4.21.2",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
