--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
   "name": "syl-transport-system",
   "private": true,
-  "version": "1.0.0",
-  "type": "module",
+  "version": "2.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "node server.js",
-    "start:vite": "vite preview --port 3000 --host 0.0.0.0 --open false",
-    "deploy:build": "npm run build && npm run start"
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@ant-design/nextjs-registry": "^1.3.0",
+    "@prisma/client": "^6.19.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.0",
     "antd": "^5.17.0",
-    "compression": "^1.8.1",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
-    "express": "^4.21.2",
     "html2pdf.js": "^0.10.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "xlsx": "^0.18.5"
+    "next": "^15.0.0",
+    "next-auth": "^5.0.0-beta.30",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "typescript": "^5.0.0",
+    "xlsx": "^0.18.5",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "eslint-config-next": "^15.0.0",
+    "prisma": "^6.19.0",
+    "tsx": "^4.0.0"
   }
 }
