--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^2.0.1",
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.3.0",
     "@prisma/client": "^6.19.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.0",
+    "ignore-loader": "^0.1.2",
     "prisma": "^6.19.0",
     "tsx": "^4.0.0"
   }
